Edited the Image file paths so the images could  render properly

--- a/eggs-benedict.html
+++ b/eggs-benedict.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Eggs Benedict</h1>
     <p>Here is one of my favorite Breakfast recipes. A classic Eggs Benedict</p>
-    <img src="/home/sean/RecipeSite/Images/eggs.jpg" alt="eggs benedict picture">
+    <img src="Images/eggs.jpg" alt="eggs benedict picture">
     <h2>Ingredients</h2>
     <ul>
         <li>6 Jumbo sized eggs</li>
