--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     I have to cook and eat healthy foods otherwise we could pass out.
      On this site we will make delicious and nutritious recipes!</p>
      <h3>My Eggs Benedict Recipe<a href="eggs-benedict.html"> Here</h3></a>
+     <h3>My Banana French Toast Recipe<a href="banana-french-toast.html">Here</h3></a>
   </body>
 </html>
